fixed styling issues on mobile scaling

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@ body {
     rgb(255, 255, 255)
   );
   margin: 0;
-  padding-right: 10px;
-  padding-left: 10px;
+  overflow-x: hidden;
 }
 
 .button {
@@ -175,10 +174,13 @@ section.section {
   align-items: center;
   justify-content: center;
   padding: 20px;
+  max-width: 80%; /* Set a maximum width for the modal */
+  margin: 0 auto; /* Center the modal horizontally */
+  overflow: auto; /* Enable scrolling for smaller screens */
 }
 
 .login-modal-logo {
-  max-width: 150px; 
+  max-width: 150px; /* Adjust the max-width based on your logo size */
   margin-bottom: 20px;
 }
 
